@@ -1,7 +1,7 @@
-/*
+/**
  * The MIT License (MIT)
  *
- * Copyright (c) 2017-2025 Ta4j Organization & respective
+ * Copyright (c) 2017-2023 Ta4j Organization & respective
  * authors (see AUTHORS)
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of
@@ -23,18 +23,19 @@
  */
 package org.ta4j.core.indicators;
 
+import java.math.BigDecimal;
+import java.math.MathContext;
+import java.math.RoundingMode;
+import java.util.Arrays;
 import java.util.List;
-
+import java.util.function.Function;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.ta4j.core.Indicator;
 import org.ta4j.core.IndicatorFactory;
 import org.ta4j.core.num.DecimalNum;
-import org.ta4j.core.num.DecimalNumFactory;
 import org.ta4j.core.num.DoubleNum;
-import org.ta4j.core.num.DoubleNumFactory;
 import org.ta4j.core.num.Num;
-import org.ta4j.core.num.NumFactory;
 
 /**
  * Abstract test class to extend BarSeries, Indicator an other test cases. The
@@ -52,42 +53,42 @@ import org.ta4j.core.num.NumFactory;
 @RunWith(Parameterized.class)
 public abstract class AbstractIndicatorTest<D, I> {
 
-    public final NumFactory numFactory;
+    public final Function<Number, Num> numFunction;
 
     @Parameterized.Parameters(name = "Test Case: {index} (0=DoubleNum, 1=DecimalNum)")
-    public static List<NumFactory> function() {
-        return List.of(DoubleNumFactory.getInstance(), DecimalNumFactory.getInstance());
+    public static List<Function<Number, Num>> function() {
+        return Arrays.asList(DoubleNum::valueOf, DecimalNum::valueOf);
     }
 
     private final IndicatorFactory<D, I> factory;
 
     /**
      * Constructor.
-     *
-     * @param factory    IndicatorFactory for building an Indicator given data and
-     *                   parameters.
-     * @param numFactory the factory to convert a Number into a Num implementation
-     *                   (automatically inserted by Junit)
+     * 
+     * @param factory     IndicatorFactory for building an Indicator given data and
+     *                    parameters.
+     * @param numFunction the function to convert a Number into a Num implementation
+     *                    (automatically inserted by Junit)
      */
-    public AbstractIndicatorTest(IndicatorFactory<D, I> factory, NumFactory numFactory) {
-        this.numFactory = numFactory;
+    public AbstractIndicatorTest(IndicatorFactory<D, I> factory, Function<Number, Num> numFunction) {
+        this.numFunction = numFunction;
         this.factory = factory;
     }
 
     /**
      * Constructor
      *
-     * @param numFactory the function to convert a Number into a Num implementation
-     *                   (automatically inserted by Junit)
+     * @param numFunction the function to convert a Number into a Num implementation
+     *                    (automatically inserted by Junit)
      */
-    public AbstractIndicatorTest(NumFactory numFactory) {
-        this.numFactory = numFactory;
+    public AbstractIndicatorTest(Function<Number, Num> numFunction) {
+        this.numFunction = numFunction;
         this.factory = null;
     }
 
     /**
      * Generates an Indicator from data and parameters.
-     *
+     * 
      * @param data   indicator data
      * @param params indicator parameters
      * @return Indicator<I> from data given parameters
@@ -98,6 +99,12 @@ public abstract class AbstractIndicatorTest<D, I> {
     }
 
     protected Num numOf(Number n) {
-        return numFactory.numOf(n);
+        return numFunction.apply(n);
     }
+
+    public Num numOf(String string, int precision) {
+        MathContext mathContext = new MathContext(precision, RoundingMode.HALF_UP);
+        return this.numOf(new BigDecimal(string, mathContext));
+    }
+
 }
